--- a/src/resources/views/user.hbs
+++ b/src/resources/views/user.hbs
@@ -1,5 +1,18 @@
-<h1>About me:</h1>
+<div class="mt-4">
+    <div class="row">
 
-<h2>Name: </h2> <i>Nguyen Sy Quyet</i>
-<h2>Age: </h2> <i>21</i>
-<h2>Gender: </h2> <i>Male</i>
+        {{#each users}}
+        <div class="col-sm-6 col-lg-4">
+            <div class="card mt-4">
+                <img src="{{this.avatar}}" class="card-img-top" style="height: 276px!important; width: 100%!important;" alt="avatar">
+                <div class="card-body">
+                    <h5 class="card-title">{{this.name}}</h5>
+                    <p class="card-text">{{this.description}}</p>
+                    <a href="user/{{this.slug}}" class="btn btn-success">About me</a>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+
+    </div>
+</div>
