create user page

--- a/src/resources/views/users/list.hbs
+++ b/src/resources/views/users/list.hbs
@@ -19,4 +19,7 @@
         {{/each}}
 
     </div>
+    
+    <a href="/users/create" class="btn btn-primary" style="margin-top: 20px;">Create new user</a>
+
 </div>
