--- a/src/resources/views/users/create.hbs
+++ b/src/resources/views/users/create.hbs
@@ -1,5 +1,7 @@
 <div class="mt-4">
-    <form method="POST" action="/users/store">
+    <h3>Create user</h3>
+
+    <form class="mt-4" method="POST" action="/users/store">
         <div class="form-group">
             <label for="name"><b>Name</b></label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
