--- a/src/resources/views/users/details.hbs
+++ b/src/resources/views/users/details.hbs
@@ -1,5 +1,7 @@
 <div class="container" style="margin-top: 20px;">
-    <div class="team-single">
+    <h3>User details</h3>
+
+    <div class="team-single mt-4">
         <div class="row">
             {{#with user}}
             <div class="col-lg-4 col-md-5 xs-margin-30px-bottom">
