--- a/src/resources/views/users/list.hbs
+++ b/src/resources/views/users/list.hbs
@@ -1,8 +1,9 @@
 <div class="mt-4">
     <div class="row">
+        <h3>Users list</h3>
 
         {{#each users}}
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
             <div class="card mt-4">
                 <a href="/users/{{this.slug}}">
                     <img src="{{this.avatar}}" class="card-img-top" style="height: 276px!important; width: 100%!important;" alt="avatar">
