--- a/src/resources/views/users/management.hbs
+++ b/src/resources/views/users/management.hbs
@@ -17,10 +17,50 @@
                 <td>{{this.gender}}</td>
                 <td>
                     <a href="/management/{{this._id}}/edit"><button type="button" class="btn btn-primary">Update</button></a>
-                    <button type="button" class="btn btn-danger">Delete</button>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDeletion" data-id="{{this._id}}">Delete</button>
                 </td>
             </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
+
+
+{{!-- Confirm deletion  --}}
+<div class="modal fade" id="confirmDeletion" tabindex="-1" aria-labelledby="confirmDeletionModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirm deletion ?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this user ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="confirm-button" class="btn btn-danger">Confirm</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<form method="POST" name="delete-form" aria-hidden="true"></form>
+
+
+<script>
+    const deletionModal = document.getElementById('confirmDeletion')
+    const confirmButton = document.getElementById('confirm-button')
+    const deleteForm = document.forms['delete-form']
+    var userId
+
+    deletionModal.addEventListener('show.bs.modal', event => {
+        const deleteButton = event.relatedTarget
+        userId = deleteButton.getAttribute('data-id')
+    })
+
+    confirmButton.onclick = () => {
+        deleteForm.action = `/management/${userId}?_method=DELETE`
+        deleteForm.submit()
+    }
+</script>
